Simple refactor